Création des fonctions wikipedia et GPT fonctionnelles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <label for="nom">Ton nom :</label>
                 <input type="text" id="nom" name="nom" placeholder="Dupont" required>
 
-                <h3>Infos complémentaires</h3>
+                <!-- <h3>Infos complémentaires</h3>
 
                 <label for="twitter">Ton compte X/Twitter :</label>
                 <input type="text" id="twitter" name="twitter" placeholder="twitter.com/toncompte">
@@ -43,7 +43,7 @@
                 <input type="text" id="discord" name="discord" placeholder="discord.gg/toncompte">
 
                 <label for="linkedin">Ton compte LinkedIn :</label>
-                <input type="text" id="linkedin" name="linkedin" placeholder="linkedin.com/in/toncompte">
+                <input type="text" id="linkedin" name="linkedin" placeholder="linkedin.com/in/toncompte"> -->
 
                 <button onclick="handleClick()">Calculer le score</button>
             </form>
@@ -53,7 +53,7 @@
                 <p id="score"></p>
             </div>
         </main>
-        <footer>Aucune des informations ne sera stocké, enregistrer ou utiliser autrement. De toute façon tu peux voir le code ;)</footer>
+        <footer>Aucune des informations ne sera stocké, enregistrer ou utiliser autrement. De toute façon tu peux voir le code ;)<br><br>Les résultats de votre score de célébrité sont basés sur les informations publiques associées à votre nom, prénom et comptes de réseaux sociaux. En cas d'homonymie, des données appartenant à une autre personne portant le même nom et prénom pourraient influencer le score.</footer>
     </div>
 </body>
 </html>
