Presque fini. Implémentation de pas mal de r&seaux, manque x et d'autres petites choses

--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
                 <label for="nom">Ton nom :</label>
                 <input type="text" id="nom" name="nom" placeholder="Dupont" required>
 
-                <!-- <h3>Infos complémentaires</h3>
+                <h3>Infos complémentaires</h3>
 
                 <label for="twitter">Ton compte X/Twitter :</label>
                 <input type="text" id="twitter" name="twitter" placeholder="twitter.com/toncompte">
 
-                <label for="ytb">Ton compte Youtube :</label>
-                <input type="text" id="ytb" name="ytb" placeholder="youtube.com/toncompte">
+                <label for="youtube">Nom de ta chaine Youtube :</label>
+                <input type="text" id="youtube" name="youtube" placeholder="Lenversdudécode">
 
                 <label for="tiktok">Ton compte TikTok :</label>
-                <input type="text" id="tiktok" name="tiktok" placeholder="tiktok.com/@toncompte">
+                <input type="text" id="tiktok" name="tiktok" placeholder="ton tiktok">
 
                 <label for="insta">Ton compte Instagram :</label>
-                <input type="text" id="insta" name="insta" placeholder="instagram.com/toncompte">
+                <input type="text" id="insta" name="insta" placeholder="ton instagram">
 
                 <label for="twitch">Ton compte Twitch :</label>
-                <input type="text" id="twitch" name="twitch" placeholder="twitch.tv/toncompte">
+                <input type="text" id="twitch" name="twitch" placeholder="Hasheur">
 
-                <label for="snap">Ton compte Snapchat :</label>
+                <!-- <label for="snap">Ton compte Snapchat :</label>
                 <input type="text" id="snap" name="snap" placeholder="snapchat.com/add/toncompte">
 
                 <label for="discord">Ton compte Discord :</label>
@@ -50,10 +50,10 @@
 
             <div id="result" class="result-container">
                 <h2>Ton score de célébrité est :</h2>
-                <p id="score"></p>
+                <p id="scoreboard"><span id="score">?</span>/5</p>
             </div>
         </main>
-        <footer>Aucune des informations ne sera stocké, enregistrer ou utiliser autrement. De toute façon tu peux voir le code ;)<br><br>Les résultats de votre score de célébrité sont basés sur les informations publiques associées à votre nom, prénom et comptes de réseaux sociaux. En cas d'homonymie, des données appartenant à une autre personne portant le même nom et prénom pourraient influencer le score.</footer>
+        <footer>Aucune des informations ne sera stocké, enregistrer ou utiliser autrement. De toute façon tu peux voir le code ;)<br><br>Ton score de célébrité est basé sur les informations publiques associées à ton nom, prénom et réseaux sociaux que tu as mis. En cas d'homonymie, des données appartenant à une autre personne portant le même nom et prénom pourraient influencer le score.<br><br>Et puis ton score de célébriter ne veut absolument rien dire, il n'est rien de plus que le fruit de mon amusement en code (même si... si t'es pas celèbre, tu ne l'es pas...).</footer>
     </div>
 </body>
 </html>
