introduction du code pour requeter twitter. Tous les réseaux sont fonctionnels

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h3>Infos complémentaires</h3>
 
                 <label for="twitter">Ton compte X/Twitter :</label>
-                <input type="text" id="twitter" name="twitter" placeholder="twitter.com/toncompte">
+                <input type="text" id="twitter" name="twitter" placeholder="ton twitter">
 
                 <label for="youtube">Nom de ta chaine Youtube :</label>
                 <input type="text" id="youtube" name="youtube" placeholder="Lenversdudécode">
