Fini. Manque la gestion de la sécurité des API.

--- a/index.html
+++ b/index.html
@@ -9,32 +9,33 @@
 <body>
     <main class="container">
         <div id="hidden" class="hiddencontainer">
-            <h2>Es-tu celèbre ? Renseigne toutes ces informations pour découvrir ton score de celèbrité.</h2>
+            <h1>Es-tu celèbre ?</h1>
+            <h2>Renseigne toutes ces informations pour découvrir ton score de celèbrité.</h2>
             <form id="celebrityForm">
-                <h3>Infos obligatoires</h3>
+                <h4>Infos obligatoires</h4>
 
                 <label for="prenom">Ton prénom :</label>
-                <input type="text" id="prenom" name="prenom" placeholder="Jean" required>
+                <input type="text" id="prenom" name="prenom" placeholder="Ton prénom" required>
 
                 <label for="nom">Ton nom :</label>
-                <input type="text" id="nom" name="nom" placeholder="Dupont" required>
+                <input type="text" id="nom" name="nom" placeholder="Ton nom" required>
 
-                <h3>Infos complémentaires</h3>
+                <h4>Infos complémentaires</h4>
 
                 <label for="twitter">Ton compte X/Twitter :</label>
-                <input type="text" id="twitter" name="twitter" placeholder="ton twitter">
+                <input type="text" id="twitter" name="twitter" placeholder="Nom d'utilisateur Twitter">
 
                 <label for="youtube">Nom de ta chaine Youtube :</label>
-                <input type="text" id="youtube" name="youtube" placeholder="Lenversdudécode">
+                <input type="text" id="youtube" name="youtube" placeholder="Nom de ta chaine Youtube">
 
                 <label for="tiktok">Ton compte TikTok :</label>
-                <input type="text" id="tiktok" name="tiktok" placeholder="ton tiktok">
+                <input type="text" id="tiktok" name="tiktok" placeholder="Nom d'utilisateur TikTok">
 
                 <label for="insta">Ton compte Instagram :</label>
-                <input type="text" id="insta" name="insta" placeholder="ton instagram">
+                <input type="text" id="insta" name="insta" placeholder="Nom d'utilisateur Instagram">
 
                 <label for="twitch">Ton compte Twitch :</label>
-                <input type="text" id="twitch" name="twitch" placeholder="Hasheur">
+                <input type="text" id="twitch" name="twitch" placeholder="Nom de ta chaine Twitch">
 
                 <!-- <label for="snap">Ton compte Snapchat :</label>
                 <input type="text" id="snap" name="snap" placeholder="snapchat.com/add/toncompte">
@@ -45,11 +46,11 @@
                 <label for="linkedin">Ton compte LinkedIn :</label>
                 <input type="text" id="linkedin" name="linkedin" placeholder="linkedin.com/in/toncompte"> -->
 
-                <button type="submit" onclick="handleClick()">Calculer le score</button>
+                <button id="submit" type="submit" onclick="handleClick()">Calculer le score</button>
             </form>
 
             <div id="result" class="result-container">
-                <h2>Ton score de célébrité est :</h2>
+                <h3>Ton score de célébrité est :</h3>
                 <p id="scoreboard"><span id="score">?</span>/5</p>
             </div>
 
