Update h2 description for clarity on required information

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main class="container">
         <div id="hidden" class="hiddencontainer">
             <h1>Es-tu celèbre ?</h1>
-            <h2>Renseigne toutes ces informations pour découvrir ton score de celèbrité.</h2>
+            <h2>Renseigne tes informations pour découvrir ton score de celèbrité de 0 à 5 ! <br>Ton nom et ton prénom sont obligatoires pour lancer le test.</h2>
             <form id="celebrityForm">
                 <h4>Infos obligatoires</h4>
 
