Fix typos and improve clarity in text content

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Es-tu celèbre</title>
+    <title>Es-tu célèbre</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <main class="container">
         <div id="hidden" class="hiddencontainer">
-            <h1>Es-tu celèbre ?</h1>
-            <h2>Renseigne tes informations pour découvrir ton score de celèbrité de 0 à 5 ! <br>Ton nom et ton prénom sont obligatoires pour lancer le test.</h2>
+            <h1>Es-tu célèbre ?</h1>
+            <h2>Renseigne tes informations pour découvrir ton score de célébrité de 0 à 5 ! <br>Ton nom et ton prénom sont obligatoires pour lancer le test.</h2>
             <form id="celebrityForm">
                 <h4>Infos obligatoires</h4>
 
@@ -45,11 +45,11 @@
                 <p id="scoreboard"><span id="score">?</span>/5</p>
             </div>
 
-            <p>Ton score de célébrité est basé sur les informations publiques associées à ton nom, prénom et réseaux sociaux que tu as mis. En cas d'homonymie, des données appartenant à une autre personne portant le même nom et prénom pourraient influencer le score.</p>
-            <p>Et puis ton score de célébriter ne veut absolument rien dire, il n'est rien de plus que le fruit de mon amusement en code (même si... si t'es pas celèbre, tu ne l'es pas...).</p>
-            <p>Enfin, je limite le nombre de requêtes à 5 par jours car toutes les APIs utilisés sont gratuites et ont un nombre de requêtes max par mois. Evitez de contourner cette mesure pour les autres :)</p>
+            <p>Ton score de célébrité est basé sur les informations publiques associées à ton nom, prénom et aux réseaux sociaux que tu as mis. En cas d'homonymie, des données appartenant à une autre personne portant le même nom et prénom pourraient influencer le score.</p>
+            <p>Et puis ton score de célébrité ne veut absolument rien dire, il n'est rien de plus que le fruit de mon amusement en code (même si... si t'es pas célèbre, tu ne l'es pas...).</p>
+            <p>Enfin, je limite le nombre de requêtes à 5 par jour car toutes les API utilisées sont gratuites et ont un nombre de requêtes max par mois. Évitez de contourner cette mesure pour les autres :)</p>
         </main>
-        <footer>Aucune des informations ne sera stocké, enregistrer ou utiliser autrement. De toute façon tu peux voir le code ;)</footer>
+        <footer>Aucune des informations ne sera stockée, enregistrée ou utilisée autrement. De toute façon tu peux voir le code ;)</footer>
     </div>
 </body>
 </html>
